[package]
name = "path_of_building_genetic_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8", features = ["luajit", "module"] }
rand = "0.8.5"
crossbeam = "0.8.1"
ouroboros = "0.15.5"
