[package]
name = "path_of_building_genetic_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.8", features = ["luajit", "module"] }
rand = "0.8.5"
crossbeam = "0.8.1"
serde_json = "1.0.91"
num_cpus  = "1.15.0"
peeking_take_while = "1.0.0"
ndarray = "0.15.6"
plotters = "0.3.4"
